# social_sensemaker

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.adoc  flake.nix  holonix.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rebuild-tui.sh  run-tui.sh  shell.nix  update-rep_lang-rev.sh
.github/workflows/: test.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  util.rs
crates/frontend/: Cargo.toml
crates/frontend-tui/: Cargo.toml
crates/frontend-tui/src/: event.rs  main.rs
crates/frontend/src/: app.rs  lib.rs
crates/rep_interchange/: Cargo.nix  Cargo.toml
crates/rep_interchange/src/: lib.rs
crates/rep_interchange/tests/: simple.rs  test.rs
crates/rep_interchange_sweettest/: Cargo.toml
crates/rep_interchange_sweettest/src/: main.rs  test.rs
crates/scaffolding/: Cargo.toml
crates/scaffolding/src/: lib.rs
crates/sensemaker_common/: Cargo.toml
crates/sensemaker_common/src/: lib.rs
crates/sensemaker_coordinator/: Cargo.toml
crates/sensemaker_core/: Cargo.toml
crates/sensemaker_core/src/: lib.rs
crates/sensemaker_integrity/: Cargo.toml
crates/sensemaker_integrity/src/: lib.rs
crates/sensemaker_macros/: Cargo.toml
crates/sensemaker_macros/src/: lib.rs
crates/sensemaker_ui/: Cargo.toml  index.html  main.js  yew_style.css
crates/sensemaker_ui/src/: app.rs  lib.rs
crates/social_sensemaker/: Cargo.toml
crates/social_sensemaker/src/: lib.rs
crates/social_sensemaker/tests/: simple.rs
crates/social_sensemaker_core/: Cargo.toml
crates/social_sensemaker_macros/: Cargo.toml
crates/social_sensemaker_macros/src/: lib.rs
happs/rep_interchange/: dna.yaml  happ.yaml
happs/scaffolding/: dna.yaml
happs/social_sensemaker/: dna.yaml  happ.yaml
nix/: rust.nix  sources.json
scripts/: package-dnas.sh
test/: index.js  package-lock.json  package.json  test_rep_interchange.js  test_scaffolding.js
ui/: README.adoc  index.html  main.js  rebuild.sh  start_server.sh
