[workspace]
members = [
  "crates/sensemaker_integrity",
  "crates/sensemaker_coordinator",
  "crates/sensemaker_macros",
  "crates/sensemaker_core",
  "crates/sensemaker_common",

  # this keeps breaking due to not-so-actively maintained deps.
  # letting it bitrot for now.
  # "crates/frontend-tui",
]
