[package]
name = "common"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
base64 = "0.13.0"
combine = "4.6.4"
getrandom = { version = "0.2", features = ["js"] }
hdk = "0.0.136"
pretty = "0.11.3"
serde = "1"

rep_lang_concrete_syntax = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "48ef57acf9304de1eb3e50dfead6e9ed99a0e2ab" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "48ef57acf9304de1eb3e50dfead6e9ed99a0e2ab", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "48ef57acf9304de1eb3e50dfead6e9ed99a0e2ab", features = ["hc"] }
social_sensemaker_macros = { path = "../social_sensemaker_macros" }
