[package]
name = "common"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license-file = "../../LICENSE"

[dependencies]
chrono = "=0.4.6"
base64 = "0.13.0"
combine = "4.6.4"
hdk = "0.0.136"
pretty = "0.11.3"
serde = "1"

rep_lang_concrete_syntax = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "2d6c6c452acf1af982d1b7136163dad2103f99e0" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "2d6c6c452acf1af982d1b7136163dad2103f99e0", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "2d6c6c452acf1af982d1b7136163dad2103f99e0", features = ["hc"] }
social_sensemaker_macros = { path = "../social_sensemaker_macros" }
