[package]
name = "frontend-tui"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "rlp"
path = "src/main.rs"

[dependencies]
combine = "4.5.2"
futures = "0.3"
holo_hash = { version = "0.0.10", default-features = false }
# naersk requires that every git dep has a `master` branch, even if our rev is not on it.
# this fork works around that, though is not a very ideal solution.
# see https://github.com/nix-community/naersk/issues/149
holochain_conductor_client = { git = "https://github.com/mhuesch/conductor-client-rust.git", rev = "da01edf2de86cdd929b8759f40058ed8ea7ecd11" }
holochain_types = "0.0.12"
holochain_zome_types = { version = "0.0.14", default-features = false }
rand = "0.8.4"
scrawl = "1.1.0"
serde_json = "1.0.70"
termion = "1.5.6"
tokio = "1.13.0"
tui = "0.16.0"
xdg = "2.4.0"

common = { path = "../common" }
rep_lang_concrete_syntax = { git = "https://github.com/sacredcapital/rep_lang.git", rev = "b4468e1e8e624386c036a6aca67e7af57617bc23" }
rep_lang_core = { git = "https://github.com/sacredcapital/rep_lang.git", rev = "b4468e1e8e624386c036a6aca67e7af57617bc23" }
rep_lang_runtime = { git = "https://github.com/sacredcapital/rep_lang.git", rev = "b4468e1e8e624386c036a6aca67e7af57617bc23" }
