[package]
name = "frontend-tui"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "rlp"
path = "src/main.rs"

[dependencies]
combine = "4.5.2"
futures = "0.3"
holo_hash = { version = "0.0.14", default-features = false }
holochain_conductor_client = { git = "https://github.com/holochain/conductor-client-rust.git", rev = "148477fdee025090bfd7a8face48a0eed3dd5788" }
holochain_types = "0.0.19"
holochain_zome_types = { version = "0.0.18", default-features = false }
pretty = "0.10.0"
rand = "0.8.4"
scrawl = "1.1.0"
serde_json = "1.0.70"
termion = "1.5.6"
tokio = "1.13.0"
tui = "0.16.0"
xdg = "2.4.0"

common = { path = "../common" }
rep_lang_concrete_syntax = { git = "https://github.com/sacredcapital/rep_lang.git", rev = "7eb11b7d688e44048ffd95b3dde87973352aaf1f" }
rep_lang_core = { git = "https://github.com/sacredcapital/rep_lang.git", rev = "7eb11b7d688e44048ffd95b3dde87973352aaf1f" }
rep_lang_runtime = { git = "https://github.com/sacredcapital/rep_lang.git", rev = "7eb11b7d688e44048ffd95b3dde87973352aaf1f" }
