[package]
name = "frontend-tui"
version = "0.1.0"
edition = "2018"
license-file = "../../LICENSE"

[[bin]]
name = "rlp"
path = "src/main.rs"

[dependencies]
combine = "4.5.2"
futures = "0.3"
holo_hash = { version = "0.0.14", default-features = false }
holochain_client = { git = "https://github.com/holochain/holochain-client-rust.git", rev = "77fae4a989fd75d5a01580e0226f733a65a1716f" }
holochain_types = "0.0.37"
holochain_zome_types = { version = "0.0.33", default-features = false }
pretty = "0.10.0"
rand = "0.8.4"
scrawl = "1.1.0"
serde_json = "1.0.70"
structopt = "0.3.25"
termion = "1.5.6"
tokio = "1.13.0"
tui = "0.16.0"
xdg = "2.4.0"

common = { path = "../common" }
rep_lang_concrete_syntax = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "bf44c3e80e0c98cfded6b7c1ba7caa38cb2449a8" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "bf44c3e80e0c98cfded6b7c1ba7caa38cb2449a8" }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "bf44c3e80e0c98cfded6b7c1ba7caa38cb2449a8" }
