[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
combine = "4.5.2"
futures = "0.3"
holo_hash = { path = "../../submodules/holochain/crates/holo_hash", default-features = false }
holochain_serialized_bytes = "0.0.51"
holochain_zome_types = { path = "../../submodules/holochain/crates/holochain_zome_types", default-features = false }
reqwasm = { git = "https://github.com/mhuesch/reqwasm.git", rev = "f4af1fd670d37b7ac9f0ac8d3543d28204c72b6e" }
serde = "1.0"
serde_bytes = "0.11.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.28"
weblog = "0.3.0"
web-sys = "0.3.55"
# use latest Yew, to have new `Context`s
yew = { git = "https://github.com/yewstack/yew.git", rev = "9c8692262bb21360f69e5ef9440e4eb1252695d4" }

common = { path = "../common" }
rep_lang_concrete_syntax = { path = "../../submodules/rep_lang/rep_lang_concrete_syntax", version = "0.1.0" }
rep_lang_core = { path = "../../submodules/rep_lang/rep_lang_core", version = "0.1.0", features = ["hc"] }
rep_lang_runtime = { path = "../../submodules/rep_lang/rep_lang_runtime", version = "0.1.0", features = ["hc"] }
