[package]
name = "frontend"
version = "0.1.0"
edition = "2018"
license-file = "../../LICENSE"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
combine = "4.5.2"
futures = "0.3"
holo_hash = { version = "0.0.8", default-features = false }
holochain_serialized_bytes = "0.0.51"
holochain_serialized_bytes_derive = "0.0.51"
holochain_zome_types = { version = "0.0.11", default-features = false }
reqwasm = { git = "https://github.com/hamza1311/reqwasm.git", rev = "fe1036f57829be5e1dcdfbc2f4d2138b4749f601" }
serde = "1.0"
serde_bytes = "0.11.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.28"
weblog = "0.3.0"
web-sys = "0.3.55"
# use latest Yew, to have new `Context`s
yew = { git = "https://github.com/yewstack/yew.git", rev = "9c8692262bb21360f69e5ef9440e4eb1252695d4" }

common = { path = "../common" }
rep_lang_concrete_syntax = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "602db0467d0df9d0584dcdf48ca79d30024d0f3d" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "602db0467d0df9d0584dcdf48ca79d30024d0f3d", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "602db0467d0df9d0584dcdf48ca79d30024d0f3d", features = ["hc"] }
