[package]
name = "rep_interchange"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.5.2"
hdk = "0.0.116"
serde = "1"

common = { path = "../common" }
rep_lang_concrete_syntax = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "3d06e84338c8f9635046b629211e4811ef9ff216" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "3d06e84338c8f9635046b629211e4811ef9ff216", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "3d06e84338c8f9635046b629211e4811ef9ff216", features = ["hc"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
