[package]
name = "rep_interchange"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.5.2"
hdk = "0.0.117"
serde = "1"

common = { path = "../common" }
rep_lang_concrete_syntax = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "3cadc2eebe7c315844527de4bab7398108a17b57" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "3cadc2eebe7c315844527de4bab7398108a17b57", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "3cadc2eebe7c315844527de4bab7398108a17b57", features = ["hc"] }

[dev-dependencies]
anyhow = "1.0.26"
futures = { version = "0.3.1", default-features = false }
hdk = "0.0.117"
holochain = { version = "0.0.121", default-features = false, features = ["test_utils"] }
observability = "0.1.3"
kitsune_p2p = "0.0.18"
kitsune_p2p_types ="0.0.15"
tokio = {version = "1.11", features = ["full"]}
#
common = { path = "../common" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
