[package]
name = "rep_interchange_sweettest"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
hdk = "0.0.117"
holochain = { version = "0.0.121", default-features = false, features = ["test_utils"] }
tokio = {version = "1.11", features = ["full"]}
futures = { version = "0.3.1", default-features = false }

common = { path = "../common" }
