[package]
name = "social_sensemaker"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "=0.4.6"
hdk = "0.0.136"
serde = "1"

common = { path = "../common" }
rep_lang_concrete_syntax = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "2d6c6c452acf1af982d1b7136163dad2103f99e0" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "2d6c6c452acf1af982d1b7136163dad2103f99e0", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "2d6c6c452acf1af982d1b7136163dad2103f99e0", features = ["hc"] }

[dev-dependencies]
anyhow = "1.0"
futures = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
#
hdk = "0.0.136"
holochain = { version = "0.0.143", default-features = false, features = ["test_utils"] }
kitsune_p2p = "0.0.35"
kitsune_p2p_types ="0.0.24"
observability = "0.1.3"
#
common = { path = "../common" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
