[package]
name = "social_sensemaker"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdk = "0.0.147"
serde = "1"

common = { path = "../common" }
rep_lang_concrete_syntax = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "364213a6b1bca2f3ebdedb9a043c0b864e4d6a49" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "364213a6b1bca2f3ebdedb9a043c0b864e4d6a49", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "364213a6b1bca2f3ebdedb9a043c0b864e4d6a49", features = ["hc"] }

[dev-dependencies]
anyhow = "1.0"
futures = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
#
hdk = "0.0.147"
holochain = { version = "0.0.155", default-features = false, features = ["test_utils"] }
kitsune_p2p = "0.0.42"
kitsune_p2p_types ="0.0.30"
observability = "0.1.3"
#
common = { path = "../common" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
